--- a/Tasks/Simplify/html/index.html
+++ b/Tasks/Simplify/html/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" style="color: rgb(12, 120, 170); margin-right: 25px;" href="currency.html">Currency</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" style="color: purple; margin-right: 25px;" href="siconvert.html">SI Converter</a>
+                    <a class="nav-link" style="color: rgb(12, 120, 170); margin-right: 25px;" href="siconvert.html">SI Converter</a>
                   </li>
                   <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: rgb(12, 120, 170); margin-right: 25px;">
