volume page commented

--- a/Tasks/Simplify/html/SArea.html
+++ b/Tasks/Simplify/html/SArea.html
@@ -60,7 +60,7 @@
                     </a>
                     <ul class="dropdown-menu menuTwo" aria-labelledby="navbarDropdown" style="color:rgba(233, 98, 49, 0.897) ; margin-right: 40px;">
                       <li><a class="dropdown-item" href="SArea.html">Area / Surface Area</a></li>
-                      <li><a class="dropdown-item" href="#">Volume</a></li>
+                      <!-- <li><a class="dropdown-item" href="#">Volume</a></li> -->
                     </ul>
                   </li>
                   
