--- a/Tasks/Simplify/html/index.html
+++ b/Tasks/Simplify/html/index.html
@@ -50,7 +50,7 @@
                     </a>
                     <ul class="dropdown-menu menuTwo" aria-labelledby="navbarDropdown" style="color: rgb(12, 120, 170); margin-right: 10px;">
                       <li><a class="dropdown-item" href="SArea.html">Area / Surface Area</a></li>
-                      <li><a class="dropdown-item" href="#">Volume</a></li>
+                      <!-- <li><a class="dropdown-item" href="#">Volume</a></li> -->
                     </ul>
                   </li>
                   
